# trajectory-tracker

./: .gitignore  README.md
docker/: install_build_run.sh
docker_compose/: .gitignore  README.md  docker-compose.yml
docker_compose/docker/ros1/: Dockerfile
docker_compose/docker/ros1/script/: install_extra_libs.sh
extralibs/DecomROS/decom_ros_msgs/: CMakeLists.txt  package.xml
extralibs/DecomROS/decom_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
extralibs/DecomROS/decom_rviz_plugins/include/decom_rviz_plugins/: data_ros_utils.h  data_type.h  data_utils.h  decomp_base.h  ellipsoid.h  ellipsoid_decomp.h  geometric_utils.h  iterative_decomp.h  line_segment.h  multi_detector.h  polyhedron.h  seed_decomp.h
extralibs/DecomROS/decom_rviz_plugins/src/: bound_visual.cpp  bound_visual.h  ellipsoid_array_display.cpp  ellipsoid_array_display.h  ellipsoid_array_visual.cpp  ellipsoid_array_visual.h  mesh_visual.cpp  mesh_visual.h  multi_detector.cpp  polyhedron_array_display.cpp  polyhedron_array_display.h  vector_visual.cpp  vector_visual.h
extralibs/mosek/toolbox/examples/: advs.m  affco1.m  affco2.m  callback.m  callback_handler.m  ceo1.m  cqo1.m  feasrepairex1.m  gp1.m  lo1.m  lo2.m  lo3.m  mico1.m  milo1.m  mioinitsol.m  normex.m  opt_server_sync.m  parameters.m  portfolio_1_basic.m  portfolio_2_frontier.m  portfolio_3_impact.m  portfolio_4_transcost.m  portfolio_5_card.m  pow1.m  qcqo1.m  qo1.m  qo2.m  reoptimization.m  (+9 more)
hagen_planner/drone_traj_contol/: CMakeLists.txt  package.xml
hagen_planner/drone_traj_contol/cfg/: DroneReg.cfg  pid_params_f450.yaml  pid_params_path.yaml  pid_params_path_boat.yaml
hagen_planner/drone_traj_contol/src/: interactive_goal.cpp  mav_ros_take_off.cc  path_traj_mhe.cpp  path_traj_mhe.h  path_traj_reg.cpp  path_traj_reg.h
hagen_planner/estimation_opt/: CMakeLists.txt  package.xml
hagen_planner/estimation_opt/include/estimation_opt/: kalman.h
hagen_planner/estimation_opt/src/: kalman.cpp
hagen_planner/map_building_opt/: CMakeLists.txt  package.xml
hagen_planner/map_building_opt/include/map_building_opt/: edt_environment.h  edtoctomap.h
hagen_planner/map_building_opt/src/: edt_environment.cpp  edtoctomap.cpp
hagen_planner/motion_model/: CMakeLists.txt  package.xml
hagen_planner/motion_model/include/motion_model/: model.h  spatial_bicycle_models.h  spatial_state.h  temporal_state.h
hagen_planner/motion_model/src/: model.cpp  spatial_bicycle_models.cpp  spatial_state.cpp  temporal_state.cpp
hagen_planner/mpc_opt/: CMakeLists.txt  package.xml
hagen_planner/mpc_opt/include/mpc_opt/: linear_mpc_opt.h  linear_mpc_trajectory_tracker.h  linearized_mpc_opt.h  linearized_mpc_trajectory_tracker.h  mpc_opt.h  mpc_solver.h  nonlinear_mpc_opt.h  trajectory_regulator.h  trajectory_tracker.h
hagen_planner/mpc_opt/models/: model_f.casadi
hagen_planner/mpc_opt/src/: linear_mpc_opt.cpp  linear_mpc_trajectory_tracker.cpp  linearized_mpc_opt.cpp  linearized_mpc_trajectory_tracker.cpp  mpc_opt.cpp  mpc_solver.cpp  nonlinear_mpc_opt.cpp  trajectory_regulator.cpp  trajectory_tracker.cpp
hagen_planner/path_finding_opt/: CMakeLists.txt  package.xml
hagen_planner/path_finding_opt/include/path_finding_opt/: dyn_a_star.h  graph_search.h  jps_planner.h  timer.hpp
hagen_planner/path_finding_opt/src/: dyn_a_star.cpp  graph_search.cpp  jps_planner.cpp
hagen_planner/quad_description/: CMakeLists.txt  package.xml
hagen_planner/quad_description/launch/: frames.gv  quad_rviz.launch
hagen_planner/quad_description/resource/: quad.rviz  quad_kinect.rviz  quad_laser.rviz
hagen_planner/quad_description/scripts/: quad_descriptor.py
hagen_planner/quad_description/urdf/: component_snippets.xacro  iris_base.xacro  kit_c.urdf  kit_c.xacro  kit_c_base.xacro  kit_c_generic_odometry_sensor.gazebo  kit_c_kinect.xacro  multirotor_base.xacro
hagen_planner/rebound_opt/: CMakeLists.txt  package.xml
hagen_planner/rebound_opt/include/rebound_opt/: rebound_optimizer.h  uniform_bspline.h
hagen_planner/rebound_opt/include/rebound_opt/LBFGSpp/: LineSearchMoreThuente.h
hagen_planner/rebound_opt/src/: gradient_descent_optimizer.cpp  rebound_optimizer.cpp  uniform_bspline.cpp
hagen_planner/scripts/: startup_linearized.smux  startup_regulator.smux  startup_remote.smux  startup_tracker.smux  startup_water.smux
hagen_planner/spline_opt/: CMakeLists.txt  package.xml
hagen_planner/spline_opt/include/spline_opt/: non_uniform_bspline.h  reference_path.h
hagen_planner/spline_opt/src/: non_uniform_bspline.cpp  reference_path.cpp
hagen_planner/state_machine/: CMakeLists.txt  README.md  package.xml
hagen_planner/state_machine/config/: fixed_joint_m100.urdf  fixed_joint_quad.urdf  octomap.yaml  traj.rviz  traj_px4.rviz  traj_px4_tmp.rviz
hagen_planner/state_machine/config.in/: config.h.in
hagen_planner/state_machine/include/state_machine/: backward.hpp  fsm_linear_trajectory_tracker.h  fsm_linearized_trajectory_tracker.h  fsm_trajectory_point_stabilizer.h  fsm_trajectory_tracker.h  simplex.h
hagen_planner/state_machine/launch/: fsm_start.launch  fsm_trajectory_linearized_traj.launch  fsm_trajectory_point_stabilizer.launch  fsm_trajectory_tracker.launch  fsm_trajectory_tracker_linear.launch  px4_reg.launch  reg_mhe.launch  rviz_p4.launch  take_off.launch
hagen_planner/state_machine/params/: params_point_stabilizer.yaml  params_trajectory_tracker.yaml  params_trajectory_tracker_linear.yaml  params_trajectory_tracker_linearized.yaml
hagen_planner/state_machine/src/: flight_controller.cpp  fsm_linear_trajectory_tracker.cpp  fsm_linearied_trajectory_tracker.cpp  fsm_trajectory_point_stabilizer.cpp  fsm_trajectory_tracker.cpp
hagen_planner/traj_common/: CMakeLists.txt  package.xml
hagen_planner/traj_common/include/traj_common/: bspline_utils.h  corridor.h  display_msgs.h  math_utils.h  param_passer.h  planning_saving.h  planning_visualization.h
hagen_planner/traj_common/src/: bspline_utils.cpp  corridor.cpp  display_msg.cpp  math_utils.cpp  param_passer.cpp  planning_saving.cpp  planning_visualization.cpp
results/: real_2png
(+127 files in other folders)
