<?xml version="1.0"?>
<package format="2">
  <name>path_finding_opt</name>
  <version>0.0.0</version>
  <description>The path_finding_opt package</description>

  <maintainer email="ggeesara@gmail.com">GPrathap</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>map_building_opt</build_depend>
  <build_depend>decom_ros_msgs</build_depend>
  <build_depend>decom_rviz_plugins</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>decom_ros_msgs</build_export_depend>
  <build_export_depend>decom_rviz_plugins</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>map_building_opt</exec_depend>
  <exec_depend>decom_ros_msgs</exec_depend>
  <exec_depend>decom_rviz_plugins</exec_depend>

  <export>

  </export>
</package>
