<?xml version="1.0"?>
<package format="2">
  <name>state_machine</name>
  <version>0.0.0</version>
  <description>The hagen_planner package</description>

  <maintainer email="ggeesara@gmail.com">GPrathap</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>map_building_opt</build_depend>
  <build_depend>hagen_msgs</build_depend>
  <build_depend>mpc_opt</build_depend>
  <build_depend>traj_common</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>spline_opt</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>rebound_opt</build_depend>
  <build_depend>path_finding_opt</build_depend>
  <build_depend>decom_rviz_plugins</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>octomap</build_export_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>mpc_opt</build_export_depend>
  <build_export_depend>spline_opt</build_export_depend>
  <build_export_depend>hagen_msgs</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>rebound_opt</build_export_depend>
  <build_export_depend>path_finding_opt</build_export_depend>
  <build_export_depend>decom_rviz_plugins</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>map_building_opt</exec_depend>
  <exec_depend>hagen_msgs</exec_depend>
  <exec_depend>mpc_opt</exec_depend>
  <exec_depend>traj_common</exec_depend>
  <exec_depend>message_runtime</exec_depend>
   <exec_depend>mavros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>spline_opt</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>rebound_opt</exec_depend>
  <exec_depend>path_finding_opt</exec_depend>
  <exec_depend>decom_rviz_plugins</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
